// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthMainView snapshot test should render correct ui when platform is android 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "flex": 1,
      "width": 750,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    keyboardShouldPersistTaps="handled"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <BVLinearGradient
        colors={
          Array [
            -16147523,
            -16754011,
          ]
        }
        endPoint={
          Object {
            "x": 0,
            "y": 1.5,
          }
        }
        locations={
          Array [
            0,
            0.5,
          ]
        }
        startPoint={
          Object {
            "x": 0.1,
            "y": 0,
          }
        }
        style={
          Object {
            "backgroundColor": "#f6f6f6",
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View />
      </BVLinearGradient>
    </View>
  </RCTScrollView>
</View>
`;

exports[`AuthMainView snapshot test should render correct ui when platform is ios 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "backgroundColor": "#f6f6f6",
      "flex": 1,
      "width": 750,
    }
  }
>
  <RCTScrollView
    collapsable={false}
    contentContainerStyle={
      Object {
        "flex": 1,
      }
    }
    keyboardShouldPersistTaps="handled"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <BVLinearGradient
        colors={
          Array [
            4278819773,
            4278213285,
          ]
        }
        endPoint={
          Object {
            "x": 0,
            "y": 1.5,
          }
        }
        locations={
          Array [
            0,
            0.5,
          ]
        }
        startPoint={
          Object {
            "x": 0.1,
            "y": 0,
          }
        }
        style={
          Object {
            "backgroundColor": "#f6f6f6",
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View />
      </BVLinearGradient>
    </View>
  </RCTScrollView>
</View>
`;
